testsuite/tests/roles/should_fail/RolesIArray.stderr
RolesIArray.hs:10:13: error: [GHC-05617]
    • Could not solve: ‘forall i.
                        Ix i =>
                        (Coercible (UArray i Word64 -> (i, i)) (UArray i N -> (i, i)),
                         Ix i)’
        arising from the coercion of the method ‘bounds’
          from type ‘forall i. Ix i => UArray i Word64 -> (i, i)’
            to type ‘forall i. Ix i => UArray i N -> (i, i)’
    • When deriving the instance for (IArray UArray N)

